Corregir nombres de archivos y crear botón para facilitar la navegación dentro de la página

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title> Prototipo de Página Web </title>
-		<link rel="stylesheet" type="text/css" href="StyleSheet.css"/>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css"/>
 	</head>
 
 	<body>
@@ -49,7 +50,10 @@
 		</main>
 
 
-		<script src="ScriptSheet.js"></script>
+		<a href="#" id="btn01"><span class="material-icons"> arrow_downward </span></a>
+
+
+		<script src="script.js"></script>
 		
 	</body>
 </html>
