--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a href="#" class="active"> Home </a></li>
 				<li><a href="#"> Home </a></li>
 				<li><a href="#"> Home </a></li>
-				<li><a href="#"> Home </a></li>
+				<li><a href="#"> Comentarios </a></li>
 			</ul>
 		</header>
 
@@ -54,6 +54,25 @@
 
 
 		<script src="script.js"></script>
+
+		<div id="disqus_thread"></div>
+        <script>
+          	var disqus_config = function () {
+              this.page.url = https://sleepnomorecompany.github.io/MareStellarum/;
+              this.page.identifier = PAGE_IDENTIFIER;
+            };
+
+      		(function() {
+          		var d = document, s = d.createElement('script');
+
+                s.src = 'https://mare-stellarum.disqus.com/embed.js';
+
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+            })();
+        </script>
+
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 		
 	</body>
 </html>
