--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<script>
 			var disqus_config = function () {
     			this.page.url = 'https://sleepnomorecompany.github.io/MareStellarum/';
-    			this.page.identifier = PAGE_IDENTIFIER;
+    			this.page.identifier = '28458764';
 			};
 
 			(function() {
