Corrección de problemas menores

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<li><a href="#" class="active"> Home </a></li>
 				<li><a href="#"> Home </a></li>
 				<li><a href="#"> Home </a></li>
-				<li><a href="#"> Comentarios </a></li>
+				<li><a href="#"> Home </a></li>
 			</ul>
 		</header>
 
@@ -50,7 +50,7 @@
 		</main>
 
 
-		<a href="#" id="btn01"><span class="material-icons"> arrow_downward </span></a>
+		<button id="btn01"><span class="material-icons"> arrow_downward </span></button>
 
 
 		<div id="disqus_thread"></div>
