--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	</head>
 
 	<body>
-
 		<header>
 			<a href="#" class="logo"> Logo </a>
 			<nav></nav>
@@ -22,7 +21,7 @@
 		</header>
 
 
-		<section>
+		<figure>
 			<img src="Pictures/Background Parallax Effect/01.png" id="img01"/>
 			<img src="Pictures/Background Parallax Effect/02.png" id="img02"/>
 			<img src="Pictures/Background Parallax Effect/03.png" id="img03"/>
@@ -35,18 +34,61 @@
 			<img src="Pictures/Background Parallax Effect/09.png" id="img09"/>
 			<img src="Pictures/Background Parallax Effect/10.png" id="img10"/>
 			<img src="Pictures/Background Parallax Effect/11.png" id="img11"/>
-		</section>
+		</figure>
 
 
 		<main>
-			<h2> Parallax Scrolling Website </h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna. <br/><br/>
+			<section>
+				<h2> Parallax Scrolling Website </h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna. 
+					<br/><br/>
 			
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna. <br/><br/>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna. 
+					<br/><br/>
 			
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna.
-			</p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna.
+				</p>
+			</section>
+
+			<section>
+				<h2> Preguntas Frecuentes </h2>
+				<article>
+	        		<details>
+	        			<summary> &nbsp 1. ¿X? </summary>
+	            		<p>
+	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            		</p>
+	        		</details>
+				</article>
+
+	            <article>
+	        		<details>
+	        			<summary> &nbsp 2. ¿X? </summary>
+	            		<p>
+	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            		</p>
+	        		</details>
+				</article>
+
+				<article>
+	        		<details>
+	        			<summary> &nbsp 3. ¿X? </summary>
+	            		<p>
+	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            		</p>
+	        		</details>
+				</article>
+
+				<article>
+	        		<details>
+	        			<summary> &nbsp 4. ¿X? </summary>
+	            		<p>
+	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            		</p>
+	        		</details>
+				</article>
+			</section>
 		</main>
 
 
@@ -76,6 +118,5 @@
 
 
         <script src="script.js"></script>
-		
 	</body>
 </html>
