Corrección de problemas generales

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 			<img src="Pictures/Background Parallax Effect/06.png" id="img06"/>
 			<img src="Pictures/Background Parallax Effect/07.png" id="img07"/>
 			<img src="Pictures/Background Parallax Effect/08.png" id="img08"/>
-			<h2 id="txt01"> Mare Stellarum </h2>
 			<img src="Pictures/Background Parallax Effect/09.png" id="img09"/>
+			<h2 id="txt01"> Mare Stellarum </h2>
 			<img src="Pictures/Background Parallax Effect/10.png" id="img10"/>
 			<img src="Pictures/Background Parallax Effect/11.png" id="img11"/>
+			<img src="Pictures/Background Parallax Effect/12.png" id="img12"/>
+			<img src="Pictures/Background Parallax Effect/13.png" id="img13"/>
 		</figure>
 
 
