Integración de contenido y corrección de errores

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 			<a href="#" class="logo"> Logo </a>
 			<nav></nav>
 			<ul>
-				<li><a href="#" class="active"> Home </a></li>
-				<li><a href="#"> Home </a></li>
-				<li><a href="#"> Home </a></li>
-				<li><a href="#"> Home </a></li>
+				<li><a href="#section01" class="active"> Campaña </a></li>
+				<li><a href="#section02"> Cuaderno de Bitácora </a></li>
+				<li><a href="#section03"> Preguntas Frecuentes </a></li>
+				<li><a href="#section04"> Comentarios </a></li>
 			</ul>
 		</header>
 
@@ -31,7 +31,7 @@
 			<img src="Pictures/Background Parallax Effect/07.png" id="img07"/>
 			<img src="Pictures/Background Parallax Effect/08.png" id="img08"/>
 			<img src="Pictures/Background Parallax Effect/09.png" id="img09"/>
-			<h2 id="txt01"> Mare Stellarum </h2>
+			<h1> Mare Stellarum </h1>
 			<img src="Pictures/Background Parallax Effect/10.png" id="img10"/>
 			<img src="Pictures/Background Parallax Effect/11.png" id="img11"/>
 			<img src="Pictures/Background Parallax Effect/12.png" id="img12"/>
@@ -40,24 +40,107 @@
 
 
 		<main>
-			<section>
-				<h2> Parallax Scrolling Website </h2>
+			<section id="section01">
+				<h2> 1. Campaña </h2>
+
+				<section class="subsection">
+					<h2> 1.1. Descripción del Juego </h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis auctor dolor ac tellus accumsan hendrerit. Cras quis tellus non leo varius aliquet ut nec lacus. Morbi porttitor ultrices tristique. Vestibulum euismod velit pellentesque urna pretium tincidunt ac in nibh. Cras fermentum nulla sit amet erat dignissim bibendum. Fusce et mollis urna. Ut eget metus a nulla interdum fermentum quis sed odio. Integer ornare, turpis et finibus dapibus, sem justo aliquam sem, at eleifend nibh ipsum ut lorem. Etiam volutpat auctor erat, sollicitudin mollis massa semper vitae. Aliquam quis sollicitudin enim, vel blandit sapien. Duis vehicula enim ligula, id convallis lorem tempor ac. Vivamus pellentesque eleifend mi, at pretium velit vulputate ut. Aenean turpis felis, venenatis nec mi in, facilisis rhoncus justo. Fusce ullamcorper at odio vitae scelerisque. Sed tincidunt tempus neque, eu rutrum diam tincidunt non. Pellentesque vehicula dignissim ante at venenatis.
+						<br/><br/>
+
+						Podéis haceros una idea de cómo será el videojuego con el siguiente video promocional:
+						<div class="trailer">
+							<iframe title="Mare Stellarum Trailer" src="https://www.youtube.com/embed/-kYb_lQzwik" allowfullscreen></iframe>
+						</div>
+					</p>
+				</section>
+
+				<section class="subsection">
+					<h2> 1.2. Historia del Juego </h2>
+					<p>
+						Eres una arqueóloga espacial en un futuro muy lejano. Hace poco fuiste contactada por la Federación Intergaláctica para investigar una serie de extraños sucesos reportados a lo largo de todo el universo conocido durante los últimos 6 meses. Desde los rincones más profundos de las galaxias que conforman el universo conocido se han registrado multitud de casos de seres y objetos que desaparecen de repente, tan sólo para reaparecer al cabo de unas pocas semanas en un estado completamente irreconocible. No obstante, estas misteriosas desapariciones son únicamente el comienzo. En algunos planetas de la Federación Intergaláctica se han producido avistamientos de extrañas criaturas no catalogadas en ninguna de las enciclopedias de formas de vida espacial. Y lo más desconcertante de todo, es que con la llegada de estos seres desconocidos han aparecido numerosos monumentos de una cultura nunca antes vista. Tu trabajo es viajar a todos aquellos lugares en que se hayan dado casos de esta índole, y realizar un informe detallado sobre todo lo que puedas aprender de estos sucesos. Una vez finalizada la investigación, deberás formular una hipótesis que pueda explicar esta situación sin precedentes.
+					</p>
+				</section>
+
+				<section class="subsection">
+					<h2> 1.3. Jugabilidad del Juego </h2>
+					<p>
+						Lo que acabáis de leer es la premisa de nuestro próximo gran lanzamiento, el videojuego de terror cósmico Mare Stellarum. Basándonos en la mitología de H. P. Lovecraft, así como en numerosos clásicos de la ciencia ficción como la novela Solaris, de Stanislaw Lem, hemos ideado una experiencia de terror completamente novedosa para el mundo de los videojuegos, en la que el jugador no sólo tendrá que enfrentar numerosos horrores innombrables y escapar de ellos con vida, sino que además deberá tratar de comprenderlos y catalogarlos. El jugador podrá investigar los extraños sucesos que se han registrado a lo largo y ancho del universo conocido en cualquier orden y, además, dispondrá de una libertad casi total para recopilar toda aquella información que considere relevante, lo cual incluye información potencialmente errónea. Todo ello busca crear una experiencia extremadamente inmersiva para el jugador, que podrá observar cómo se abre ante él un vasto universo repleto de decisiones.  
+					</p>
+				</section>
+
+				<section class="subsection">
+					<h2> 1.4. Compendio de Criaturas </h2>
+
+					<article class="creatures inbetween">
+						<img src="Pictures/Mystic Creatures/02.png"/>
+						<div>
+							<h3> Cryptomorphus Lethalis </h3>
+							<p>
+								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+							</p>
+						</div>
+					</article>
+
+					<article class="creatures inbetween">
+						<img src="Pictures/Mystic Creatures/02.png"/>
+						<div>
+							<h3> Cryptomorphus Lethalis </h3>
+							<p>
+								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+							</p>
+						</div>
+					</article>
+
+					<article class="creatures inbetween">
+						<img src="Pictures/Mystic Creatures/02.png"/>
+						<div>
+							<h3> Cryptomorphus Lethalis </h3>
+							<p>
+								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+							</p>
+						</div>
+					</article>
+
+					<article class="creatures inbetween">
+						<img src="Pictures/Mystic Creatures/02.png"/>
+						<div>
+							<h3> Cryptomorphus Lethalis </h3>
+							<p>
+								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+							</p>
+						</div>
+					</article>
+
+					<article class="creatures">
+						<img src="Pictures/Mystic Creatures/02.png"/>
+						<div>
+							<h3> Cryptomorphus Lethalis </h3>
+							<p>
+								Una criatura parasitaria que infecta a seres vivos de todo tipo, distorsionando brutalmente su apariencia original y absorbiendo lentamente los nutrientes de su cuerpo. El proceso de infección hace irreconocible tanto a la criatura original como al huésped infectado, lo que dificulta a otros seres vivos identificar la amenza ante la que se encuentran. No se conoce a ciencia cierta la apariencia original de la criatura, aunque se sospecha que tiene algún parecido al reino de las plantas o de los hongos. Una vez el huésped infectado está a punto de morir, la criatura finge su propia muerte para atraer a otros seres carroñeros, a los que ataca por sorpresa para infectarlos. Debido a este comportamiento, se ha establecido un paralelismo con las plantas atrapamoscas, las cuales también tienden trampas y esperan pacientemente a su próxima víctima.
+							</p>
+						</div>
+					</article>
+				</section>
+			</section>
+
+
+			<section id="section02">
+				<h2> 2. Cuaderno de Bitácora </h2>
+
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna. 
-					<br/><br/>
-			
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna. 
-					<br/><br/>
-			
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem. Integer bibendum ultrices gravida. Etiam sit amet dignissim dolor. Etiam a elit nec elit tincidunt aliquet a eu ipsum. Nulla facilisi. Proin sodales libero malesuada quam iaculis, a sodales odio rutrum. Nunc blandit at diam ac cursus. Morbi rutrum purus in ligula tempor ultricies. Quisque posuere laoreet pulvinar. Aenean nec facilisis eros. Ut blandit risus purus, sit amet malesuada turpis tincidunt imperdiet. Fusce varius, magna id aliquet euismod, urna mi sollicitudin sem, nec rutrum massa quam eget libero. Nam vitae dui lacus. Pellentesque euismod nisl et orci placerat gravida. Curabitur vel arcu ac tortor cursus congue id ac lacus. In mollis, massa et eleifend condimentum, leo ex luctus lorem, at semper augue dui ac diam. Sed id turpis in nulla condimentum dapibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse potenti. Ut vulputate, nunc non elementum eleifend, lectus nisi placerat velit, nec fringilla ligula orci scelerisque ligula. Pellentesque id euismod urna.
+					Todavía no se ha añadido ninguna entrada al cuaderno de bitácora, pero revisa de vez en cuando esta sección para estar al día con cualquier posible actualización del proyecto Mare Stellarum.
 				</p>
 			</section>
 
-			<section>
-				<h2> Preguntas Frecuentes </h2>
+
+			<section id="section03">
+				<h2> 3. Preguntas Frecuentes </h2>
+
 				<article>
 	        		<details>
-	        			<summary> &nbsp 1. ¿X? </summary>
+	        			<summary> &nbsp 1. ¿Cuándo surgió la idea original del juego? </summary>
 	            		<p>
 	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
 	            		</p>
@@ -66,7 +149,7 @@
 
 	            <article>
 	        		<details>
-	        			<summary> &nbsp 2. ¿X? </summary>
+	        			<summary> &nbsp 2. ¿Cuánto tiempo ha estado en desarrollo el juego? </summary>
 	            		<p>
 	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
 	            		</p>
@@ -75,7 +158,7 @@
 
 				<article>
 	        		<details>
-	        			<summary> &nbsp 3. ¿X? </summary>
+	        			<summary> &nbsp 3. ¿Cuál será la fecha de lanzamiento del juego? </summary>
 	            		<p>
 	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
 	            		</p>
@@ -84,12 +167,17 @@
 
 				<article>
 	        		<details>
-	        			<summary> &nbsp 4. ¿X? </summary>
+	        			<summary> &nbsp 4. ¿Qué plataformas serán compatibles con el juego? </summary>
 	            		<p>
 	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
 	            		</p>
 	        		</details>
 				</article>
+			</section>
+
+
+			<section id="section04">
+				<h2> 4. Comentarios </h2>
 			</section>
 		</main>
 
