--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 	        		<details>
 	        			<summary> &nbsp 1. ¿Cuándo surgió la idea original del juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            			La idea surgió hace un año y medio cuando al equipo se le ocurrió que podía ser buena idea inspirarnos en Lovecraft para diseñar un juego de terror espacial.
 	            		</p>
 	        		</details>
 				</article>
@@ -203,8 +203,7 @@
 	        		<details>
 	        			<summary> &nbsp 2. ¿Cuánto tiempo ha estado en desarrollo el juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
-	            		</p>
+	            			Estuvimos barajando las bases del diseño alrededor de seis meses antes de dedicar el último año a comenzar a crear realmente Mare Stellarum.
 	        		</details>
 				</article>
 
@@ -212,7 +211,7 @@
 	        		<details>
 	        			<summary> &nbsp 3. ¿Cuál será la fecha de lanzamiento del juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
+	            			Si se cumple el objetivo de la campaña, estimamos que podríamos llegar a lanzarlo en los próximos dos años.
 	            		</p>
 	        		</details>
 				</article>
@@ -221,8 +220,7 @@
 	        		<details>
 	        			<summary> &nbsp 4. ¿Qué plataformas serán compatibles con el juego? </summary>
 	            		<p>
-	            			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras neque sem, auctor id mi eget, finibus volutpat enim. Maecenas sed nunc eget nibh tempor elementum. Integer nec ullamcorper lorem.
-	            		</p>
+	            			Estamos planeando sacar el juego primero en PC, y luego, en Nintendo y PlayStation.
 	        		</details>
 				</article>
 			</section>
